cabal-version:      2.2
name:               implicit
version:            0.4.1.0
tested-with:        GHC >=8.8
build-type:         Simple
synopsis:           A math-inspired programmatic 2D & 3D CAD system.
description:
  An OpenSCAD execution engine for generating models in STL and many other formats.

license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Julia Longtin <julia.longtin@gmail.com>
maintainer:         Julia Longtin <julia.longtin@gmail.com>
homepage:           http://implicitcad.org/
category:           Graphics
extra-source-files:
  LICENSE
  README.md
  tests/golden/*.ascii.stl
  tests/golden/*.obj
  tests/golden/*.png
  tests/golden/*.scad
  tests/golden/*.three.js
  tests/golden/boxCylinder.stl

extra-doc-files:
  CHANGELOG.md
  CONTRIBUTORS
  Release.md
  Tools.md

flag extopenscad
  default:     True
  description: Builds extopenscad program

flag docgen
  default:     True
  description: Builds docgen program

flag implicitsnap
  default:     False
  description: Builds implicitsnap program

common binstuff
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    StrictData

  ghc-options:
    -threaded -rtsopts "-with-rtsopts -N -qg -t" -optc-O3
    -feager-blackholing -Wall -Wextra -Wcompat
    -Wmonomorphism-restriction -Wmissing-signatures
    -Wmissing-export-lists -Wmissing-import-lists
    -Wmissing-home-modules -Widentities -Wimplicit-prelude
    -Wredundant-constraints -Wall-missed-specialisations

-- see GHC manual 8.2.1 section 6.5.1.
common libstuff
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    StrictData

  ghc-options:
    -optc-O3 -feager-blackholing -Wall -Wextra -Wcompat
    -Wmonomorphism-restriction -Wmissing-signatures
    -Wmissing-export-lists -Wmissing-import-lists
    -Wmissing-home-modules -Widentities -Wimplicit-prelude
    -Wredundant-constraints -Wall-missed-specialisations

-- see GHC manual 8.2.1 section 6.5.1.
library
  import:          libstuff
  build-depends:
    , base                >=3 && <5
    , blaze-builder
    , blaze-markup
    , blaze-svg
    , bytestring
    , containers
    , data-default-class
    , deepseq
    , directory
    , filepath
    , JuicyPixels
    , lens
    , linear
    , mtl
    , parallel
    , parsec
    , prettyprinter
    , random
    , show-combinators
    , text

  exposed-modules:
    Graphics.Implicit
    Graphics.Implicit.Canon
    Graphics.Implicit.Definitions
    Graphics.Implicit.Export
    Graphics.Implicit.Export.DiscreteAproxable
    Graphics.Implicit.Export.NormedTriangleMeshFormats
    Graphics.Implicit.Export.OutputFormat
    Graphics.Implicit.Export.PolylineFormats
    Graphics.Implicit.Export.Render.GetLoops
    Graphics.Implicit.Export.Resolution
    Graphics.Implicit.Export.SymbolicFormats
    Graphics.Implicit.Export.SymbolicObj2
    Graphics.Implicit.Export.SymbolicObj3
    Graphics.Implicit.Export.TriangleMeshFormats
    Graphics.Implicit.ExtOpenScad
    Graphics.Implicit.ExtOpenScad.Definitions
    Graphics.Implicit.ExtOpenScad.Eval.Constant
    Graphics.Implicit.ExtOpenScad.Parser.Expr
    Graphics.Implicit.ExtOpenScad.Parser.Statement
    Graphics.Implicit.ExtOpenScad.Primitives
    Graphics.Implicit.MathUtil
    Graphics.Implicit.ObjectUtil
    Graphics.Implicit.Primitives

  -- These modules are exposed for the unit tests against the parser interface.
  -- These are exposed for Benchmark.
  -- These are exposed for implicitsnap.
  -- These are exposed for docgen.
  -- These are exposed for testing
  -- Exposed for executables
  other-modules:
    Graphics.Implicit.Export.RayTrace
    Graphics.Implicit.Export.Render
    Graphics.Implicit.Export.Render.Definitions
    Graphics.Implicit.Export.Render.GetSegs
    Graphics.Implicit.Export.Render.HandlePolylines
    Graphics.Implicit.Export.Render.HandleSquares
    Graphics.Implicit.Export.Render.Interpolate
    Graphics.Implicit.Export.Render.RefineSegs
    Graphics.Implicit.Export.Render.TesselateLoops
    Graphics.Implicit.Export.Symbolic.Rebound2
    Graphics.Implicit.Export.Symbolic.Rebound3
    Graphics.Implicit.Export.TextBuilderUtils
    Graphics.Implicit.Export.Util
    Graphics.Implicit.ExtOpenScad.Default
    Graphics.Implicit.ExtOpenScad.Eval.Expr
    Graphics.Implicit.ExtOpenScad.Eval.Statement
    Graphics.Implicit.ExtOpenScad.Parser.Lexer
    Graphics.Implicit.ExtOpenScad.Parser.Util
    Graphics.Implicit.ExtOpenScad.Util.ArgParser
    Graphics.Implicit.ExtOpenScad.Util.OVal
    Graphics.Implicit.ExtOpenScad.Util.StateC
    Graphics.Implicit.FastIntUtil
    Graphics.Implicit.IntegralUtil
    Graphics.Implicit.ObjectUtil.GetBox2
    Graphics.Implicit.ObjectUtil.GetBox3
    Graphics.Implicit.ObjectUtil.GetBoxShared
    Graphics.Implicit.ObjectUtil.GetImplicit2
    Graphics.Implicit.ObjectUtil.GetImplicit3
    Graphics.Implicit.ObjectUtil.GetImplicitShared

executable extopenscad
  import:         binstuff

  if !flag(extopenscad)
    buildable: False

  main-is:        extopenscad.hs
  hs-source-dirs: programs
  build-depends:
    , base
    , filepath
    , implicit
    , optparse-applicative  >=0.10.0
    , text

executable docgen
  import:         binstuff

  if !flag(docgen)
    buildable: False

  main-is:        docgen.hs
  hs-source-dirs: programs
  build-depends:
    , base
    , implicit
    , text

executable implicitsnap
  import:         binstuff

  if !flag(implicitsnap)
    buildable: False

  main-is:        implicitsnap.hs
  hs-source-dirs: programs
  build-depends:
    , aeson
    , base
    , bytestring
    , implicit
    , linear
    , snap-core
    , snap-server
    , text
    , utf8-string

benchmark Benchmark
  import:         binstuff
  type:           exitcode-stdio-1.0
  main-is:        Benchmark.hs
  hs-source-dirs: programs
  build-depends:
    , base
    , criterion
    , implicit
    , linear

test-suite test-implicit
  import:         binstuff
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: tests
  build-depends:
    , base
    , bytestring
    , directory
    , hedgehog
    , hspec
    , HUnit
    , hw-hspec-hedgehog
    , implicit
    , lens
    , linear
    , parsec
    , QuickCheck
    , text

  other-modules:
    ExecSpec.Expr
    ExecSpec.Util
    GoldenSpec.Spec
    GoldenSpec.Util
    Graphics.Implicit.Test.Instances
    Graphics.Implicit.Test.Utils
    ImplicitSpec
    MessageSpec.Message
    MessageSpec.Util
    ParserSpec.Expr
    ParserSpec.Statement
    ParserSpec.Util
    PropertySpec
    PropertySpec.Exec
    RewriteSpec
    TesselationSpec

benchmark parser-bench
  import:         binstuff
  type:           exitcode-stdio-1.0
  main-is:        parser-bench.hs
  hs-source-dirs: programs
  build-depends:
    , base
    , criterion
    , implicit
    , parsec

source-repository head
  type:     git
  location: https://github.com/Haskell-Things/ImplicitCAD.git
